--- a/index.html
+++ b/index.html
@@ -22,30 +22,32 @@
 <body>
 
     <header class="page-header">
-        <nav class="header-nav">
-            <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a class="nav-link" href="./index.html">Studio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="contacts">
-            <ul class="contacts-list">
-                <li class="contacts-item">
-                    <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="contacts-item">
-                    <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container header-container">
+            <nav class="header-nav">
+                <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html">Studio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="contacts">
+                <ul class="contacts-list">
+                    <li class="contacts-item">
+                        <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="contacts-item">
+                        <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
 
     <main class="page-main">
