--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
 
     <main class="page-main">
         <section class="page-main-section">
-
-            <h1 class="page-main-section-title">
-                Effective Solutions for Your Business
-            </h1>
-            <button class="page-main-section-button" type="button">
-                Order Service
-            </button>
+            <div class="container">
+                <h1 class="page-main-section-title">
+                    Effective Solutions for Your Business
+                </h1>
+                <button class="page-main-section-button" type="button">
+                    Order Service
+                </button>
+            </div>
         </section>
 
         <section class="page-main-first-section">
