--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- common -->
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title>
+    <title>Web Studio</title>
 
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.0/modern-normalize.min.css"
-        integrity="sha512-3axTZ/bKFZH5/qLFTl4U+mDbBDFW+5QO5L7D1HnOhlhJbcNDIVJxoNm6It77g0eUdzfKZlHirayqRC2qJaAOJw=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+        integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--connect-fonts-->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-
+    <!-- common -->
+    <!-- header-->
     <header class="page-header">
         <div class="container header-container">
             <nav class="header-nav">
@@ -29,12 +30,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html">Studio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Contacts</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
                 </ul>
             </nav>
             <address class="contacts">
@@ -49,133 +46,158 @@
             </address>
         </div>
     </header>
-
-    <main class="page-main">
-        <section class="page-main-section">
+    <!-- header -->
+    <main>
+        <!-- Hero Section -->
+        <section class="hero-section">
             <div class="container">
-                <h1 class="page-main-section-title">
-                    Effective Solutions for Your Business
-                </h1>
-                <button class="page-main-section-button" type="button">
-                    Order Service
-                </button>
+                <h1 class="main-title">Effective Solutions for Your Business</h1>
+                <button class="hero-btn" type="button">Order Service</button>
             </div>
         </section>
-
-        <section class="page-main-first-section">
-            <h2 class="page-main-first-section-title">Benefits</h2>
-
-            <ul class="page-main-first-section-list">
-                <li class="page-main-first-section-item">
-                    <h3 class="page-main-first-section-item-title">Strategy</h3>
-                    <p class="page-main-first-section-item-text">
-                        Our goal is to identify the business problem to walk away with the
-                        perfect and creative solution.
-                    </p>
-                </li>
-                <li class="page-main-first-section-item">
-                    <h3 class="page-main-first-section-item-title">Punctuality</h3>
-                    <p class="page-main-first-section-item-text">
-                        Bring the key message to the brand's audience for the best price
-                        within the shortest possible time.
-                    </p>
-                </li>
-                <li class="page-main-first-section-item">
-                    <h3 class="page-main-first-section-item-title">Diligence</h3>
-                    <p class="page-main-first-section-item-text">
-                        Research and confirm brands that present the strongest digital
-                        growth opportunities and minimize risk.
-                    </p>
-                </li>
-                <li class="page-main-first-section-item">
-                    <h3 class="page-main-first-section-item-title">Technologies</h3>
-                    <p class="page-main-first-section-item-text">
-                        Design practice focused on digital experiences. We bring forth a
-                        deep passion for problem-solving.
-                    </p>
-                </li>
-            </ul>
+        <!-- Our Benefits -->
+        <section class="benefits-section">
+            <div class="container">
+                <h2 class="visually-hidden">Our Benefits</h2>
+                <ul class="benefits-list">
+                    <li class="benefits-item">
+                        <h3 class="benefits-list-title">Strategy</h3>
+                        <p class="benefits-list-text">
+                            Our goal is to identify the business problem to walk away with
+                            the perfect and creative solution.
+                        </p>
+                    </li>
+                    <li class="benefits-item">
+                        <h3 class="benefits-list-title">Punctuality</h3>
+                        <p class="benefits-list-text">
+                            Bring the key message to the brand's audience for the best price
+                            within the shortest possible time.
+                        </p>
+                    </li>
+                    <li class="benefits-item">
+                        <h3 class="benefits-list-title">Diligence</h3>
+                        <p class="benefits-list-text">
+                            Research and confirm brands that present the strongest digital
+                            growth opportunities and minimize risk.
+                        </p>
+                    </li>
+                    <li class="benefits-item">
+                        <h3 class="benefits-list-title">Technologies</h3>
+                        <p class="benefits-list-text">
+                            Design practice focused on digital experiences. We bring forth a
+                            deep passion for problem-solving.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
+        <!-- Our Team -->
+        <section class="team-section">
+            <div class="container">
+                <h2 class="section-title">Our Team</h2>
+                <ul class="team-list">
+                    <li class="team-item">
+                        <img class="team-list-img" src="./images/img.jpg" alt="Mark Guerrero avatar" width="264"
+                            height="260" />
+                        <div class="team-wrapper">
+                            <h3 class="team-title">Mark Guerrero</h3>
+                            <p class="team-text">Product Designer</p>
+                        </div>
+                    </li>
 
-        <section class="page-main-second">
-            <h2 class="page-main-second-title">Our Team</h2>
-            <ul class="page-main-second-list">
-                <li class="page-main-second-list-item">
-                    <img class="page-main-second-list-img" width="264" src="./images/img.jpg"
-                        alt="Photo by Mark Guerrero, product Designer" />
-                    <h3 class="page-main-second-list-title">Mark Guerrero</h3>
-                    <p class="page-main-second-list-text">Product Designer</p>
-                </li>
-                <li class="page-main-second-list-item">
-                    <img class="page-main-second-list-img" width="264" src="./images/img.2.jpg"
-                        alt="Photo by Tom Ford, frontend Developer" />
-                    <h3 class="page-main-second-list-title">Tom Ford</h3>
-                    <p class="page-main-second-list-text">Frontend Developer</p>
-                </li>
-                <li class="page-main-second-list-item">
-                    <img class="page-main-second-list-img" width="264" src="./images/img3.jpg"
-                        alt="Photo by Camila Garcia, Marketing" />
-                    <h3 class="page-main-second-list-title">Camila Garcia</h3>
-                    <p class="page-main-second-list-text">Marketing</p>
-                </li>
-                <li class="page-main-second-list-item">
-                    <img class="page-main-second-list-img" width="264" src="./images/img.4.jpg"
-                        alt="Photo by Daniel Wilson, UI Designer" />
-                    <h3 class="page-main-second-list-title">Daniel Wilson</h3>
-                    <p class="page-main-second-list-text">UI Designer</p>
-                </li>
-            </ul>
+                    <li class="team-item">
+                        <img class="team-list-img" src="./images/img.2.jpg" alt="Frontend Developer avatar" width="264"
+                            height="260" />
+                        <div class="team-wrapper">
+                            <h3 class="team-title">Tom Ford</h3>
+                            <p class="team-text">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img class="team-list-img" src="./images/img3.jpg" alt="Camila Garcia avatar" width="264"
+                            height="260" />
+                        <div class="team-wrapper">
+                            <h3 class="team-title">Camila Garcia</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img class="team-list-img" src="./images/img.4.jpg" alt="Daniel Wilson avatar" width="264"
+                            height="260" />
+                        <div class="team-wrapper">
+                            <h3 class="team-title">Daniel Wilson</h3>
+                            <p class="team-text">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
-
-        <section class="page-main-third">
-            <h2 class="page-main-second-title">Our Portfolio</h2>
-            <ul class="page-main-second-list">
-                <li class="page-main-second-list-item">
-                    <img class="page-main-second-list-img" width="360" src="./images/banking-app.jpg"
-                        alt="Photo banking-app" />
-                    <h3 class="page-main-second-list-title">Banking App</h3>
-                    <p class="page-main-second-list-text">App</p>
-                </li>
-                <li class="page-main-second-list-item">
-                    <img class="page-main-second-list-img" width="360" src="./images/payment.jpg"
-                        alt="Photo cashless-payment" />
-                    <h3 class="page-main-second-list-title">Cashless Payment</h3>
-                    <p class="page-main-second-list-text">Marketing</p>
-                </li>
-                <li class="page-main-second-list-item">
-                    <img class="page-main-second-list-img" width="360" src="./images/mediation.jpg"
-                        alt="Photo Meditation App" />
-                    <h3 class="page-main-second-list-title">Meditation App</h3>
-                    <p class="page-main-second-list-text">App</p>
-                </li>
-                <li class="page-main-second-list-item">
-                    <img class="page-main-second-list-img" width="360" src="./images/taxi.jpg"
-                        alt="Photo taxi-service" />
-                    <h3 class="page-main-second-list-title">Taxi Service</h3>
-                    <p class="page-main-second-list-text">Marketing</p>
-                </li>
-                <li class="page-main-second-list-item">
-                    <img class="page-main-second-list-img" width="360" src="./images/screen.jpg"
-                        alt="Photo screen-illustrations" />
-                    <h3 class="page-main-second-list-title">Screen Illustrations</h3>
-                    <p class="page-main-second-list-text">Design</p>
-                </li>
-                <li class="page-main-second-list-item">
-                    <img class="page-main-second-list-img" width="360" src="./images/online.jpg"
-                        alt="Photo online-courses" />
-                    <h3 class="page-main-second-list-title">Online Courses</h3>
-                    <p class="page-main-second-list-text">Marketing</p>
-                </li>
-            </ul>
+        <!-- Our Portfolio -->
+        <section class="portfolio-section">
+            <div class="container">
+                <h2 class="section-title">Our Portfolio</h2>
+                <ul class="portfolio-list">
+                    <li class="portfolio-item">
+                        <img class="portfolio-list-img" src="./images/banking-app.jpg" alt="Mark Guerrero avatar"
+                            width="360" height="260" />
+                        <div class="portfolio-wrapper">
+                            <h3 class="portfolio-title">Banking App</h3>
+                            <p class="team-text">App</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-list-img" src="./images/payment.jpg" alt="Frontend Developer avatar"
+                            width="360" height="260" />
+                        <div class="portfolio-wrapper">
+                            <h3 class="portfolio-title">Cashless Payment</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-list-img" src="./images/mediation.jpg" alt="Camila Garcia avatar"
+                            width="360" height="260" />
+                        <div class="portfolio-wrapper">
+                            <h3 class="portfolio-title">Meditation App</h3>
+                            <p class="team-text">App</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-list-img" src="./images/taxi.jpg" alt="Daniel Wilson avatar" width="360"
+                            height="260" />
+                        <div class="portfolio-wrapper">
+                            <h3 class="portfolio-title">Taxi Service</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-list-img" src="./images/screen.jpg" alt="Daniel Wilson avatar" width="360"
+                            height="260" />
+                        <div class="portfolio-wrapper">
+                            <h3 class="portfolio-title">Screen Illustrations</h3>
+                            <p class="team-text">Design</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-list-img" src="./images/online.jpg" alt="Daniel Wilson avatar" width="360"
+                            height="260" />
+                        <div class="portfolio-wrapper">
+                            <h3 class="portfolio-title">Online Courses</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
-
+    <!-- Page Footer -->
     <footer class="page-footer">
-        <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-        <p class="page-footer-text">
-            Increase the flow of customers and sales for your business with digital
-            marketing & growth solutions.
-        </p>
+        <div class="container page-foote">
+            <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+            <p class="text-footer">
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+            </p>
+        </div>
     </footer>
 </body>
 
