--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             width="360" height="260" />
                         <div class="portfolio-wrapper">
                             <h3 class="portfolio-title">Banking App</h3>
-                            <p class="team-text">App</p>
+                            <p class="team-text-ourt">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -150,7 +150,7 @@
                             width="360" height="260" />
                         <div class="portfolio-wrapper">
                             <h3 class="portfolio-title">Cashless Payment</h3>
-                            <p class="team-text">Marketing</p>
+                            <p class="team-text-ourt">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -158,7 +158,7 @@
                             width="360" height="260" />
                         <div class="portfolio-wrapper">
                             <h3 class="portfolio-title">Meditation App</h3>
-                            <p class="team-text">App</p>
+                            <p class="team-text-ourt">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -166,7 +166,7 @@
                             height="260" />
                         <div class="portfolio-wrapper">
                             <h3 class="portfolio-title">Taxi Service</h3>
-                            <p class="team-text">Marketing</p>
+                            <p class="team-text-ourt">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -174,7 +174,7 @@
                             height="260" />
                         <div class="portfolio-wrapper">
                             <h3 class="portfolio-title">Screen Illustrations</h3>
-                            <p class="team-text">Design</p>
+                            <p class="team-text-ourt">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -182,7 +182,7 @@
                             height="260" />
                         <div class="portfolio-wrapper">
                             <h3 class="portfolio-title">Online Courses</h3>
-                            <p class="team-text">Marketing</p>
+                            <p class="team-text-ourt">Marketing</p>
                         </div>
                     </li>
                 </ul>
@@ -192,7 +192,7 @@
     <!-- Page Footer -->
     <footer class="page-footer">
         <div class="container page-foote">
-            <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+            <a class="logo footer-logo" href="./index.html">Web<span class="logo-part-footer">Studio</span></a>
             <p class="text-footer">
                 Increase the flow of customers and sales for your business with
                 digital marketing & growth solutions.
